--- a/templates/dataanalysis/landing.html
+++ b/templates/dataanalysis/landing.html
@@ -13,8 +13,7 @@
                 ModelYourData
             </h1>
             <p class="hero-subtitle">
-                Upload your CSV data and unlock powerful analytics instantly.
-                Visualize, analyze, and discover insights with ease.
+                Cheikh Bamba DEME.
             </p>
         </div>
     </section>
